feat: Enhance footer with FrameX logo and improved design
FOOTER ENHANCEMENTS:

1. Logo Integration:
   - Added official FrameX logo to footer (180px width)
   - Logo properly sized and positioned in About column
   - Logo image saved as framex-logo-footer.png

2. Color Scheme Improvements:
   - Background: Dark gray (#1a1a1a) for better contrast
   - Text color: Light gray (#e0e0e0) for readability
   - Secondary text: #b0b0b0 for descriptions and links
   - Accent color: FrameX orange (#ff6b35) for hover states
   - Footer bottom: Darker background with subtle border

3. Typography Enhancements:
   - Title font size: 1.25rem with 600 weight
   - Body text: 0.95rem with improved letter spacing (0.3px)
   - Line height: 1.7 for better readability
   - Consistent Inter font family throughout

4. Spacing & Layout:
   - Footer padding: 70px top for breathing room
   - Grid gap: 60px between columns (desktop)
   - Margin between elements optimized
   - Footer bottom: 30px padding with background overlay

5. Interactive Elements:
   - Social icons: 42x42px with border and hover effects
   - Hover state: Orange background with shadow
   - Link hover: Color transition with subtle left padding
   - Smooth transitions (0.3s) for all interactions

6. Responsive Design:
   - Desktop (1024px+): 3-column grid layout
   - Tablet (768-1023px): 2-column with About spanning full width
   - Mobile (<768px): Single column, centered content
   - Logo scales: 180px → 160px → 150px → 140px

7. Applied to All Pages:
   - Home (index.html)
   - Products (products.html)
   - About (about.html)
   - Projects (projects.html)
   - Blog (blog.html)
   - Contact (contact.html)
   - Investor Relations (investor-relations.html)

VISUAL IMPROVEMENTS:
- Professional dark theme footer
- Clear visual hierarchy
- Better contrast and readability
- Smooth hover animations
- Consistent brand presentation
- Modern, clean aesthetic

--- a/contact.html
+++ b/contact.html
@@ -299,13 +299,14 @@
     </main>
 
     <!-- Footer -->
+        <!-- Enhanced Footer with Logo -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <!-- About FrameX Column -->
                 <div class="footer-column footer-about">
                     <div class="footer-logo">
-                        <img src="assets/images/framex-logo.svg" alt="FrameX Logo" width="120" height="40">
+                        <img src="assets/images/framex-logo-footer.png" alt="FrameX - Shaping Tomorrow's Living" width="180" height="auto">
                     </div>
                     <p class="footer-description" data-lang="footer-about-desc">
                         FrameX pioneers modern steel construction through innovative prefabrication technology, delivering sustainable and smart living spaces with integrated solutions.
