feat: Implement unified design system for fonts, colors, and footer
- Created comprehensive unified-design.css with standardized typography and colors
- Defined consistent FrameX brand variables (colors, fonts, spacing)
- Implemented responsive footer with 4-column layout (About, Links, Services, Contact)
- Added FrameX logo integration in footer (180px width)
- Applied consistent Inter font family across all elements
- Standardized font sizes using rem units for better scalability
- Enhanced footer with gradient background and modern styling
- Added hover effects and transitions for better UX
- Implemented responsive breakpoints for tablet and mobile
- Updated all pages (Home, Products, About, Projects, Blog, Contact, Investor Relations)
- Added Vietnamese translations for new footer sections
- Created minified version for production use
- Fixed font inconsistencies and color uniformity issues
- Ensured WCAG 2.1 AA compliance for accessibility

--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page Not Found - FrameX">
     <title>404 - Page Not Found | FrameX</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/unified-design.css">
     <style>
         :root {
             --black: #000000;
@@ -21,7 +22,7 @@
         }
         
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
             background: var(--white);
             color: var(--black);
             min-height: 100vh;
