--- a/backups/homepage-update-2025-09-28T17-38-23-344Z/index.html
+++ b/backups/homepage-update-2025-09-28T17-38-23-344Z/index.html
@@ -527,7 +527,6 @@
     <meta name="twitter:title" content="FrameX - Shaping Tomorrow's Living | Smart Prefabricated Steel Structures">
     <meta name="twitter:description" content="FrameX pioneers modern steel construction with smart prefabricated structures. Complete integrated solutions for homeowners and developers.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
-    <link rel="stylesheet" href="css/homepage-updates.css">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -807,7 +806,7 @@
         <div class="container">
             <div class="services-header">
                 <h2 class="section-title">
-                    
+                    <span style="margin-right: 8px;">👉</span>
                     <span data-lang="services-title">Dịch vụ trọn gói hoàn hảo</span>
                 </h2>
                 <p class="section-subtitle" data-lang="services-subtitle">
@@ -955,7 +954,7 @@
                 <!-- About FrameX Column -->
                 <div class="footer-column footer-about">
                     <div class="footer-logo">
-                        <img src="https://page.gensparksite.com/v1/base64_upload/c648078921c4cc3d26de6fb9d1e94e5b" alt="FrameX - Shaping Tomorrow's Living" width="180" height="auto">
+                        <img src="assets/images/framex-logo-footer.png" alt="FrameX - Shaping Tomorrow's Living" width="180" height="auto">
                     </div>
                     <p class="footer-description" data-lang="footer-about-desc">
                         FrameX pioneers modern steel construction through innovative prefabrication technology, delivering sustainable and smart living spaces with integrated solutions.
