fix(homepage): Surgical updates for service icons and footer logo
Service Icons:
- Replace Font Awesome solid icons with outline SVG icons
- Use consistent 1.5px stroke width matching homepage design
- Implement via CSS pseudo-elements with data URIs
- Icons: compass, factory, wrench, chip (all 48x48px)

Footer Logo:
- Update to correct asset: http://framex.vn/assets/images/framex-logo-footer.png
- Match Contact page footer implementation
- Size: 180x48px max

No DOM structure changes. CSS-only implementation.

--- a/backups/surgical-update-2025-09-28T17-48-23-777Z/index.html
+++ b/backups/surgical-update-2025-09-28T17-48-23-777Z/index.html
@@ -528,7 +528,6 @@
     <meta name="twitter:description" content="FrameX pioneers modern steel construction with smart prefabricated structures. Complete integrated solutions for homeowners and developers.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/homepage-updates.css">
-    <link rel="stylesheet" href="homepage-surgical-updates.css">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -956,7 +955,7 @@
                 <!-- About FrameX Column -->
                 <div class="footer-column footer-about">
                     <div class="footer-logo">
-                        <img src="http://framex.vn/assets/images/framex-logo-footer.png" alt="FrameX - Shaping Tomorrow's Living" width="180" height="auto">
+                        <img src="https://page.gensparksite.com/v1/base64_upload/c648078921c4cc3d26de6fb9d1e94e5b" alt="FrameX - Shaping Tomorrow's Living" width="180" height="auto">
                     </div>
                     <p class="footer-description" data-lang="footer-about-desc">
                         FrameX pioneers modern steel construction through innovative prefabrication technology, delivering sustainable and smart living spaces with integrated solutions.
