feat: Apply surgical display updates for improved UI consistency
- Added lighter footer background (#F7F7F9) with WCAG AA compliance
- Added 3D Warehouse social icon to all page footers
- Updated product page text: 'Khách hàng mục tiêu' → 'Dành cho'
- Implemented check icon style for bullet points via CSS
- Created comprehensive surgical-updates.css for minimal overrides
- Maintained Vietnamese content support throughout
- CSS-only implementation with no DOM structure changes
- Added responsive and dark mode support
- Ensured accessibility standards are maintained

--- a/404.html
+++ b/404.html
@@ -103,7 +103,8 @@
             height: 40px;
         }
     </style>
-</head>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    </head>
 <body>
     <div class="error-container">
         <div class="logo">
