--- a/new-homepage-structure.html
+++ b/new-homepage-structure.html
@@ -309,7 +309,8 @@
             }
         }
     </style>
-</head>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    </head>
 <body>
     <!-- NEW HERO SECTION -->
     <section class="hero-new">
