--- a/performance-dashboard.html
+++ b/performance-dashboard.html
@@ -108,7 +108,8 @@
             display: none;
         }
     </style>
-</head>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    </head>
 <body>
     <div class="container">
         <h1>🚀 FrameX Performance Dashboard</h1>
