--- a/services.html
+++ b/services.html
@@ -43,7 +43,8 @@
             background: #e55a2b;
         }
     </style>
-</head>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    </head>
 <body>
     <div class="container">
         <h1>Page Removed</h1>
