--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
     <meta name="twitter:description" content="Contact FrameX for your steel construction project. Get a quote, schedule consultation, or become a partner.">
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/footer-v2.css">
-</head>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    </head>
 <body>
     <!-- Skip to main content for accessibility -->
     <a href="#main" style="position:absolute;top:-40px;left:0;background:#000;color:#fff;padding:8px;z-index:10000;text-decoration:none;" onfocus="this.style.top='0'" onblur="this.style.top='-40px'">Skip to main content</a>
@@ -392,6 +393,15 @@
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                             <rect x="2" y="9" width="4" height="12"></rect>
                             <circle cx="4" cy="4" r="2"></circle>
+                        </svg>
+                    </a>
+                
+                    <a href="https://3dwarehouse.sketchup.com/by/framexvn" target="_blank" rel="noopener" aria-label="3D Warehouse">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 2L2 7v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7l-10-5z"></path>
+                            <path d="M12 22V12"></path>
+                            <path d="M22 7l-10 5L2 7"></path>
+                            <path d="M2 12l10 5 10-5"></path>
                         </svg>
                     </a>
                 </div>
