feat: Update products comparison table with new bilingual content
- Replaced comparison table content with comprehensive feature descriptions
- Added proper Vietnamese diacritics and terminology
- Implemented i18n support with language-specific content
- Created JavaScript handler for dynamic language switching
- Maintained existing table structure and CSS classes
- Preserved featured column highlighting for SMART tier
- Added responsive and accessibility enhancements
- Ensured no mixed-language cells per locale

Content changes:
- Enhanced area descriptions with clear unit specifications
- Expanded Smart Home feature details
- Clarified Fire Protection capabilities
- Added full Artistic Steel descriptions
- Improved Target Customer descriptions for each tier

--- a/products.html
+++ b/products.html
@@ -37,6 +37,7 @@
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
+    <link rel="stylesheet" href="css/comparison-table-i18n.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -253,7 +254,7 @@
                 <table class="comparison-table">
                     <thead>
                         <tr>
-                            <th data-lang="compare-feature">Đặc điểm</th>
+                            <th data-lang="compare-feature">Tính năng</th>
                             <th>FrameX STARTER</th>
                             <th class="featured">FrameX SMART</th>
                             <th>FrameX PREMIUM</th>
@@ -261,46 +262,46 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td data-lang="compare-area">Diện tích</td>
-                            <td><150m² (1 tầng)<br>50m²/tầng (2-3 tầng)</td>
-                            <td class="featured"><225m² (1 tầng)<br>75m²/tầng (2-3 tầng)</td>
-                            <td>>300m² sàn<br>>150m²/tầng (2 tầng)</td>
+                            <td data-lang="compare-area">Diện tích phù hợp</td>
+                            <td>< 150 m² (một tầng)<br>hoặc 50 m²/tầng nếu 2-3 tầng</td>
+                            <td class="featured">< 225 m² (một tầng)<br>hoặc 75 m²/tầng nếu 2-3 tầng</td>
+                            <td>> 300 m² sàn<br>hoặc > 150 m²/tầng (2 tầng)</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-structure">Kết cấu thép</td>
+                            <td data-lang="compare-structure">Kết cấu thép (Steel Structure)</td>
                             <td>Tiêu chuẩn</td>
-                            <td class="featured">Nâng cao, tùy biến</td>
-                            <td>Cao cấp, thiết kế riêng</td>
+                            <td class="featured">Nâng cao, có thể tùy biến theo yêu cầu</td>
+                            <td>Cao cấp, thiết kế riêng hoàn toàn</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-waterproof">Chống thấm</td>
+                            <td data-lang="compare-waterproof">Chống thấm (Waterproofing)</td>
                             <td>Cơ bản</td>
                             <td class="featured">Cơ bản</td>
                             <td>Nâng cao</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-insulation">Cách nhiệt</td>
+                            <td data-lang="compare-insulation">Cách nhiệt (Insulation)</td>
                             <td>Cơ bản</td>
                             <td class="featured">Cơ bản</td>
                             <td>Nâng cao</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-smart">Smart Home</td>
-                            <td><i class="fas fa-minus"></i></td>
-                            <td class="featured">Cơ bản<br>(chống trộm, báo cháy, camera, internet)</td>
-                            <td>Nâng cao<br>(theo yêu cầu)</td>
+                            <td data-lang="compare-smart">Smart Home / tiện ích thông minh</td>
+                            <td>–</td>
+                            <td class="featured">Cơ bản (bao gồm chống trộm, báo cháy, camera, internet)</td>
+                            <td>Nâng cao — tùy chỉnh theo yêu cầu riêng</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-fireproof">Chống cháy</td>
-                            <td><i class="fas fa-minus"></i></td>
-                            <td class="featured"><i class="fas fa-minus"></i></td>
-                            <td><i class="fas fa-check"></i> Kết cấu chống cháy</td>
+                            <td data-lang="compare-fireproof">Chống cháy (Fire Protection)</td>
+                            <td>–</td>
+                            <td class="featured">–</td>
+                            <td>Kết cấu chống cháy đầy đủ</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-artistic">Thép nghệ thuật</td>
+                            <td data-lang="compare-artistic">Chi tiết sắt mỹ thuật (Artistic Steel: cầu thang, lan can, chi tiết đặc biệt)</td>
                             <td>Cầu thang đơn giản</td>
                             <td class="featured">Cầu thang đơn giản</td>
-                            <td>Cầu thang, lan can, chi tiết đặc biệt</td>
+                            <td>Cầu thang + lan can + các chi tiết đặc biệt</td>
                         </tr>
                         <tr>
                             <td data-lang="compare-warranty">Bảo hành</td>
@@ -309,10 +310,10 @@
                             <td>20 năm</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-target">Dành cho</td>
-                            <td>Nhà phố nhỏ<br>Công trình phổ thông</td>
-                            <td class="featured">Villa nhỏ<br>Cần tiện ích & cá nhân hóa</td>
-                            <td>Biệt thự lớn<br>Công trình đặc biệt</td>
+                            <td data-lang="compare-target">Đối tượng khách hàng mục tiêu</td>
+                            <td>Nhà phố nhỏ, công trình phổ thông</td>
+                            <td class="featured">Villa nhỏ, cần tiện ích & cá nhân hóa</td>
+                            <td>Biệt thự lớn, công trình đặc biệt</td>
                         </tr>
                     </tbody>
                 </table>
@@ -491,5 +492,6 @@
     
     <script src="js/main.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/comparison-table-i18n.js"></script>
 </body>
 </html>
