feat: Change footer background to pure white for consistency
- Set footer background to #FFFFFF across all pages
- Adjusted text/link colors for WCAG AA compliance
- Maintained existing footer structure and layout
- Added CSS token overrides with hard-coded fallbacks
- Preserved hover states and accessibility features

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
     <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/service-icons-update.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
+    <link rel="stylesheet" href="css/footer-white-override.css">
 </head>
 <body>
     <!-- Skip to main content for accessibility -->
