--- a/products.html
+++ b/products.html
@@ -37,6 +37,7 @@
     <meta name="twitter:image" content="https://framex.vn/assets/images/twitter-card.jpg">
     <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
+    <link rel="stylesheet" href="css/footer-white-override.css">
     <link rel="stylesheet" href="css/comparison-table-i18n.css">
     </head>
 <body>
