--- a/services.html
+++ b/services.html
@@ -44,6 +44,7 @@
         }
     </style>
     <link rel="stylesheet" href="css/surgical-updates.css">
+    <link rel="stylesheet" href="css/footer-white-override.css">
     </head>
 <body>
     <div class="container">
