feat: Update Vietnamese comparison table with cleaner visual design
- Updated Vietnamese table content only (English untouched)
- Added cleaner, minimal styling with brand accent
- Implemented zebra striping for better readability
- Added left border accent to feature column
- Included sticky header for desktop viewing
- Enhanced featured column (SMART) with subtle highlight
- Added scope attributes for accessibility
- Maintained responsive behavior with horizontal scroll on mobile

--- a/products.html
+++ b/products.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-white-override.css">
     <link rel="stylesheet" href="css/comparison-table-i18n.css">
+        <link rel="stylesheet" href="css/comparison-table-clean.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -252,66 +253,66 @@
         <div class="container">
             <h2 class="section-title" data-lang="compare-title">So Sánh Sản Phẩm</h2>
             <div class="comparison-table-wrapper">
-                <table class="comparison-table">
+                                <table class="comparison-table">
                     <thead>
                         <tr>
-                            <th data-lang="compare-feature">Tính năng</th>
-                            <th>FrameX STARTER</th>
-                            <th class="featured">FrameX SMART</th>
-                            <th>FrameX PREMIUM</th>
+                            <th scope="col" data-lang="compare-feature"><strong>Tính năng</strong></th>
+                            <th scope="col"><strong>FrameX STARTER</strong></th>
+                            <th scope="col" class="featured"><strong>FrameX SMART</strong></th>
+                            <th scope="col"><strong>FrameX PREMIUM</strong></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td data-lang="compare-area">Diện tích phù hợp</td>
-                            <td>< 150 m² (một tầng)<br>hoặc 50 m²/tầng nếu 2-3 tầng</td>
-                            <td class="featured">< 225 m² (một tầng)<br>hoặc 75 m²/tầng nếu 2-3 tầng</td>
+                            <td scope="row" data-lang="compare-area"><strong>Diện tích phù hợp</strong></td>
+                            <td>< 150 m² (một tầng)<br>hoặc 50 m²/tầng (2–3 tầng)</td>
+                            <td class="featured">< 225 m² (một tầng)<br>hoặc 75 m²/tầng (2–3 tầng)</td>
                             <td>> 300 m² sàn<br>hoặc > 150 m²/tầng (2 tầng)</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-structure">Kết cấu thép (Steel Structure)</td>
+                            <td scope="row" data-lang="compare-structure"><strong>Kết cấu thép</strong></td>
                             <td>Tiêu chuẩn</td>
                             <td class="featured">Nâng cao, có thể tùy biến theo yêu cầu</td>
                             <td>Cao cấp, thiết kế riêng hoàn toàn</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-waterproof">Chống thấm (Waterproofing)</td>
+                            <td scope="row" data-lang="compare-waterproof"><strong>Chống thấm</strong></td>
                             <td>Cơ bản</td>
                             <td class="featured">Cơ bản</td>
                             <td>Nâng cao</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-insulation">Cách nhiệt (Insulation)</td>
+                            <td scope="row" data-lang="compare-insulation"><strong>Cách nhiệt</strong></td>
                             <td>Cơ bản</td>
                             <td class="featured">Cơ bản</td>
                             <td>Nâng cao</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-smart">Smart Home / tiện ích thông minh</td>
+                            <td scope="row" data-lang="compare-smart"><strong>Tiện ích thông minh (Smart Home)</strong></td>
                             <td>–</td>
-                            <td class="featured">Cơ bản (bao gồm chống trộm, báo cháy, camera, internet)</td>
-                            <td>Nâng cao — tùy chỉnh theo yêu cầu riêng</td>
+                            <td class="featured">Cơ bản<br>(chống trộm, báo cháy, camera, internet)</td>
+                            <td>Nâng cao<br>tùy chỉnh theo yêu cầu riêng</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-fireproof">Chống cháy (Fire Protection)</td>
+                            <td scope="row" data-lang="compare-fireproof"><strong>Chống cháy</strong></td>
                             <td>–</td>
                             <td class="featured">–</td>
                             <td>Kết cấu chống cháy đầy đủ</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-artistic">Chi tiết sắt mỹ thuật (Artistic Steel: cầu thang, lan can, chi tiết đặc biệt)</td>
+                            <td scope="row" data-lang="compare-artistic"><strong>Chi tiết sắt mỹ thuật</strong><br>(cầu thang, lan can, chi tiết đặc biệt)</td>
                             <td>Cầu thang đơn giản</td>
                             <td class="featured">Cầu thang đơn giản</td>
                             <td>Cầu thang + lan can + các chi tiết đặc biệt</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-warranty">Bảo hành</td>
+                            <td scope="row" data-lang="compare-warranty"><strong>Bảo hành</strong></td>
                             <td>15 năm</td>
                             <td class="featured">15 năm</td>
                             <td>20 năm</td>
                         </tr>
                         <tr>
-                            <td data-lang="compare-target">Đối tượng khách hàng mục tiêu</td>
+                            <td scope="row" data-lang="compare-target"><strong>Khách hàng mục tiêu</strong></td>
                             <td>Nhà phố nhỏ, công trình phổ thông</td>
                             <td class="featured">Villa nhỏ, cần tiện ích & cá nhân hóa</td>
                             <td>Biệt thự lớn, công trình đặc biệt</td>
