fix: Repair footer social links and CTA button styling
- Fixed social media icon order: 3D Warehouse, Pinterest, LinkedIn
- Normalized icon sizes to 24x24 with consistent stroke style
- Added proper rel='noopener noreferrer' to all external links
- Fixed CTA button styling with black background and proper states
- Implemented hover, focus, and active states for accessibility
- Added dark mode and reduced motion support
- Ensured WCAG AA contrast compliance throughout

--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
     </style>
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-white-override.css">
+    <link rel="stylesheet" href="css/footer-fixes.css">
     </head>
 <body>
     <div class="container">
