--- a/about.html
+++ b/about.html
@@ -427,6 +427,7 @@
     <link rel="stylesheet" href="css/footer-v2.css">
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-white-override.css">
+    <link rel="stylesheet" href="css/footer-fixes.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -602,28 +603,27 @@
                     </ul>
                 </div>
                 
-                <div class="footer-v2__social">
-                    <a href="https://www.pinterest.com/FRAMEXVN/" target="_blank" rel="noopener" aria-label="Pinterest">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <div class="footer-v2__social">
+                    <a href="https://3dwarehouse.sketchup.com/by/framexvn" target="_blank" rel="noopener noreferrer" aria-label="3D Warehouse">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 2L2 7v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7l-10-5z"></path>
+                            <path d="M12 22V12"></path>
+                            <path d="M22 7l-10 5L2 7"></path>
+                            <path d="M2 12l10 5 10-5"></path>
+                        </svg>
+                    </a>
+                    <a href="https://www.pinterest.com/FRAMEXVN/" target="_blank" rel="noopener noreferrer" aria-label="Pinterest">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="10"></circle>
                             <path d="M8 11.973c0-2.483 1.826-4.505 4.08-4.505 2.254 0 4.08 2.022 4.08 4.505 0 2.483-1.826 4.505-4.08 4.505-.522 0-1.023-.109-1.479-.311"></path>
                             <path d="M9.56 15.51l1.528-5.572"></path>
                         </svg>
                     </a>
-                    <a href="https://www.linkedin.com/company/framexvn" target="_blank" rel="noopener" aria-label="LinkedIn">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <a href="https://www.linkedin.com/company/framexvn" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                             <rect x="2" y="9" width="4" height="12"></rect>
                             <circle cx="4" cy="4" r="2"></circle>
-                        </svg>
-                    </a>
-                
-                    <a href="https://3dwarehouse.sketchup.com/by/framexvn" target="_blank" rel="noopener" aria-label="3D Warehouse">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M12 2L2 7v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7l-10-5z"></path>
-                            <path d="M12 22V12"></path>
-                            <path d="M22 7l-10 5L2 7"></path>
-                            <path d="M2 12l10 5 10-5"></path>
                         </svg>
                     </a>
                 </div>
