fix: Apply light theme to comparison table for better readability
- Simplified color scheme with white background and light gray accents
- Implemented zebra striping for better row differentiation
- Added subtle orange accent line at header top
- Removed dark gradients and heavy backgrounds
- Normalized borders to single neutral color (#E5E7EB)
- Improved text contrast (15.3:1 main, 5.5:1 muted)
- Added subtle left border accent to feature column
- Maintained responsive behavior and structure

--- a/products.html
+++ b/products.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="css/footer-fixes.css">
     <link rel="stylesheet" href="css/comparison-table-i18n.css">
         <link rel="stylesheet" href="css/comparison-table-clean.css">
+    <link rel="stylesheet" href="css/comparison-table-light-theme.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
