--- a/products.html
+++ b/products.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="css/comparison-table-i18n.css">
         <link rel="stylesheet" href="css/comparison-table-clean.css">
     <link rel="stylesheet" href="css/comparison-table-light-theme.css">
+    <link rel="stylesheet" href="css/comparison-table-white-bg.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
