style: Align Project page filter buttons with Blog category pill styles
- Applied pill-shaped design matching Blog categories exactly
- Changed from uppercase rectangular buttons to lowercase pills
- Updated default state: light gray background with subtle border
- Active state: solid black background with white text
- Removed uppercase text transform and letter spacing
- Added proper hover and focus states for accessibility
- Maintained existing functionality and JavaScript behavior
- Responsive adjustments for mobile devices

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/surgical-updates.css">
     <link rel="stylesheet" href="css/footer-white-override.css">
     <link rel="stylesheet" href="css/footer-fixes.css">
+    <link rel="stylesheet" href="css/project-filter-pill-style.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
