--- a/products.html
+++ b/products.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="css/footer-white-override.css">
     <link rel="stylesheet" href="css/footer-fixes.css">
                             <link rel="stylesheet" href="css/comparison-table-redesign.css">
+    <link rel="stylesheet" href="css/vi-table-refinements.css">
     </head>
 <body>
     <!-- Skip to main content for accessibility -->
@@ -253,75 +254,75 @@
         <div class="container">
             <h2 class="section-title" data-lang="compare-title">So Sánh Sản Phẩm</h2>
             <!-- Vietnamese Version - Use when html[lang="vi"] -->
-<div class="comparison-table-wrapper">
-    <table class="fx-table comparison-table" role="table" aria-label="So sánh sản phẩm FrameX">
-        <caption class="sr-only">Bảng so sánh các gói sản phẩm FrameX: Starter, Smart và Premium</caption>
-        <thead>
-            <tr>
-                <th scope="col">Tính năng</th>
-                <th scope="col">FrameX STARTER</th>
-                <th scope="col" class="featured-col">FrameX SMART</th>
-                <th scope="col">FrameX PREMIUM</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">Diện tích phù hợp</th>
-                <td>&lt; 150 m² (một tầng)<br>hoặc 50 m²/tầng (2–3 tầng)</td>
-                <td class="featured-col">&lt; 225 m² (một tầng)<br>hoặc 75 m²/tầng (2–3 tầng)</td>
-                <td>&gt; 300 m² sàn<br>hoặc &gt; 150 m²/tầng (2 tầng)</td>
-            </tr>
-            <tr>
-                <th scope="row">Kết cấu thép</th>
-                <td>Tiêu chuẩn</td>
-                <td class="featured-col">Nâng cao, có thể tùy biến theo yêu cầu</td>
-                <td>Cao cấp, thiết kế riêng hoàn toàn</td>
-            </tr>
-            <tr>
-                <th scope="row">Chống thấm</th>
-                <td>Cơ bản</td>
-                <td class="featured-col">Cơ bản</td>
-                <td>Nâng cao</td>
-            </tr>
-            <tr>
-                <th scope="row">Cách nhiệt</th>
-                <td>Cơ bản</td>
-                <td class="featured-col">Cơ bản</td>
-                <td>Nâng cao</td>
-            </tr>
-            <tr>
-                <th scope="row">Tiện ích thông minh (Smart Home)</th>
-                <td><span class="empty-value">–</span></td>
-                <td class="featured-col">Cơ bản<br>(chống trộm, báo cháy, camera, internet)</td>
-                <td>Nâng cao<br>tùy chỉnh theo yêu cầu riêng</td>
-            </tr>
-            <tr>
-                <th scope="row">Chống cháy</th>
-                <td><span class="empty-value">–</span></td>
-                <td class="featured-col"><span class="empty-value">–</span></td>
-                <td>Kết cấu chống cháy đầy đủ</td>
-            </tr>
-            <tr>
-                <th scope="row">Chi tiết sắt mỹ thuật<br>(cầu thang, lan can, chi tiết đặc biệt)</th>
-                <td>Cầu thang đơn giản</td>
-                <td class="featured-col">Cầu thang đơn giản</td>
-                <td>Cầu thang + lan can + các chi tiết đặc biệt</td>
-            </tr>
-            <tr>
-                <th scope="row">Bảo hành</th>
-                <td>15 năm</td>
-                <td class="featured-col">15 năm</td>
-                <td>20 năm</td>
-            </tr>
-            <tr>
-                <th scope="row">Khách hàng mục tiêu</th>
-                <td>Nhà phố nhỏ, công trình phổ thông</td>
-                <td class="featured-col">Villa nhỏ, cần tiện ích &amp; cá nhân hóa</td>
-                <td>Biệt thự lớn, công trình đặc biệt</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+            <div class="comparison-table-wrapper">
+                <table class="fx-table comparison-table" role="table" aria-label="So sánh sản phẩm FrameX">
+                    <caption class="sr-only">Bảng so sánh các gói sản phẩm FrameX: Starter, Smart và Premium</caption>
+                    <thead>
+                        <tr>
+                            <th scope="col"><strong>Tính năng</strong></th>
+                            <th scope="col"><strong>FrameX STARTER</strong></th>
+                            <th scope="col" class="featured-col"><strong>FrameX SMART</strong></th>
+                            <th scope="col"><strong>FrameX PREMIUM</strong></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row"><strong>Diện tích phù hợp</strong></th>
+                            <td>&lt; 150 m² (một tầng)<br>hoặc 50 m²/tầng (2–3 tầng)</td>
+                            <td class="featured-col">&lt; 225 m² (một tầng)<br>hoặc 75 m²/tầng (2–3 tầng)</td>
+                            <td>&gt; 300 m² sàn<br>hoặc &gt; 150 m²/tầng (2 tầng)</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Kết cấu thép</strong></th>
+                            <td>Tiêu chuẩn</td>
+                            <td class="featured-col">Nâng cao, có thể tùy biến theo yêu cầu</td>
+                            <td>Cao cấp, thiết kế riêng hoàn toàn</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Chống thấm</strong></th>
+                            <td>Cơ bản</td>
+                            <td class="featured-col">Cơ bản</td>
+                            <td>Nâng cao</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Cách nhiệt</strong></th>
+                            <td>Cơ bản</td>
+                            <td class="featured-col">Cơ bản</td>
+                            <td>Nâng cao</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Tiện ích thông minh (Smart Home)</strong></th>
+                            <td><span class="empty-value">–</span></td>
+                            <td class="featured-col">Cơ bản<br>(chống trộm, báo cháy, camera, internet)</td>
+                            <td>Nâng cao<br>tùy chỉnh theo yêu cầu riêng</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Chống cháy</strong></th>
+                            <td><span class="empty-value">–</span></td>
+                            <td class="featured-col"><span class="empty-value">–</span></td>
+                            <td>Kết cấu chống cháy đầy đủ</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Chi tiết sắt mỹ thuật</strong><br>(cầu thang, lan can, chi tiết đặc biệt)</th>
+                            <td>Cầu thang đơn giản</td>
+                            <td class="featured-col">Cầu thang đơn giản</td>
+                            <td>Cầu thang + lan can + các chi tiết đặc biệt</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Bảo hành</strong></th>
+                            <td>15 năm</td>
+                            <td class="featured-col">15 năm</td>
+                            <td>20 năm</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><strong>Khách hàng mục tiêu</strong></th>
+                            <td>Nhà phố nhỏ, công trình phổ thông</td>
+                            <td class="featured-col">Villa nhỏ, cần tiện ích &amp; cá nhân hóa</td>
+                            <td>Biệt thự lớn, công trình đặc biệt</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
     
