--- a/services-old.html
+++ b/services-old.html
@@ -2,12 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <!-- NEW UNIFIED DESIGN SYSTEM -->
-    <link rel="stylesheet" href="css/design-system.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/responsive-grid.css">
-    <link rel="stylesheet" href="css/table-system.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="FrameX Services - This page has been removed. Please visit our homepage for our complete service offerings.">
     <title>Services | FrameX - Page Removed</title>
@@ -49,11 +43,11 @@
             background: #e55a2b;
         }
     </style>
+    <link rel="stylesheet" href="css/surgical-updates.css">
+    <link rel="stylesheet" href="css/footer-white-override.css">
+    <link rel="stylesheet" href="css/footer-fixes.css">
     </head>
 <body>
-    <!-- Skip to main content for accessibility -->
-    <a href="#main" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-primary text-white px-4 py-2 rounded-md z-50">Skip to main content</a>
-    
     <div class="container">
         <h1>Page Removed</h1>
         <p>The Services page has been removed. Our complete service offerings are now showcased directly on our homepage for your convenience.</p>
